2025-08-14T00:58:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16953062412 # 735
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-14
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 596 989 / 610 1004
* notice: next accum: outdated-unq outdated-all / unq all: 597 990 / 611 1005
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-30] / [2025-08-13]

2025-08-13T00:57:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16924622028 # 734
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-13
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 595 988 / 609 1003
* notice: next accum: outdated-unq outdated-all / unq all: 596 989 / 610 1004
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-29] / [2025-08-12]

2025-08-12T00:56:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16896021431 # 733
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-12
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 595 988 / 608 1002
* notice: next accum: outdated-unq outdated-all / unq all: 595 988 / 609 1003
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-11]

2025-08-11T01:02:50Z: