@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-14T00:58:01Z",
+  "timestamp" : "2025-08-15T00:58:10Z",
   "count_outdated" : 990,
   "uniques_outdated" : 597,
-  "count" : 1005,
-  "uniques" : 611,
+  "count" : 1006,
+  "uniques" : 612,
   "clones" : [
     {
       "timestamp": "2025-08-01T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2025-08-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
