@@ -1,3 +1,12 @@
+2025-08-15T00:58:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16980262951 # 736
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-15
+* notice: last 14d: unq all: 4 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 597 990 / 611 1005
+* notice: next accum: outdated-unq outdated-all / unq all: 597 990 / 612 1006
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-08-14]
+
 2025-08-14T00:58:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16953062412 # 735
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-14
